# study

./: .clang-format  CMakeLists.txt  Makefile  README.md  build.sh  log_test
notes/: clean_architecture.md
tests/: Makefile
tests/log_test/: CMakeLists.txt  Makefile  log_test  log_test.cpp
utils/: Makefile  log.cpp  perf.cpp  perf.h  priv_log.cpp  priv_log.h
